Fix popup overflow

--- a/www.threefoldtoken.com/themes/landing/static/css/custom.css
+++ b/www.threefoldtoken.com/themes/landing/static/css/custom.css
@@ -675,6 +675,9 @@ header .introWords h2 {
    -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
     filter: grayscale(0%);
  }
+ .rj-team {
+   overflow: -webkit-paged-x;
+ }
 /* Display the columns below each other instead of side by side on small screens */
 @media (max-width: 650px) {
     .column {
